--- a/UiAutotest_appium/pom.xml
+++ b/UiAutotest_appium/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>extentreports</artifactId>
             <version>3.0.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.17</version>
+        </dependency>
     </dependencies>
 
 
